# pddl-lib

./: .coverage  .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  PRD.md  README.md  TODO.md  contributors.txt  demo.py  domain-02.pddl  domain-03.pddl  pddl.g4  pddl.py  pddlpy-readme.txt  pyproject.toml  requirements.txt  setup.py
.claude/: CLAUDE.md
.claude/skills/run-pddlpy/: SKILL.md  smoke.py
.github/workflows/: build-publish.yaml  ci.yaml  publish.yaml
docs/: llm-interaction.md  object-model.md  prd-1.0.md
e2e/llm/: README.md  claude_driver.sh  harness.py
e2e/llm/transcripts/: dry-run-20260712-222235.md  qwen_qwen-2.5-72b-instruct-20260713-102438.md
examples/: 01_parsing_basics.py  02_type_hierarchy.py  03_logical_operators.py  04_planners.py  05_numeric_and_costs.py  06_durative.py
examples-pddl/: domain-01.pddl  domain-03.pddl  domain-04.pddl  domain-05.pddl  domain-06.pddl  problem-01.pddl  problem-02.pddl  problem-04.pddl  problem-05.pddl  problem-06.pddl
examples-python/: demo.py
examples/pddl/: blocksworld-problem.pddl  courier-domain.pddl  courier-problem.pddl  durative-action-problem.pddl  gripper-domain.pddl  gripper-problem.pddl  logic-domain.pddl  logic-problem.pddl  logistics-domain.pddl  numeric-transport-domain.pddl
pddlnet/: pddl.cs  pddlnet.dll.nuspec  pddltest.cs
pddlpy/: __init__.py  binding.py  cli.py  diagnostics.py  mcpserver.py  pddl.py  serialize.py  test.py
pddlpy/planning/: __init__.py  base.py  costs.py  durative.py  grounding.py  registry.py  search.py  state.py  temporal.py
skills/pddlpy/: SKILL.md
testpublish/: Dockerfile
tests/: test_action_costs.py  test_adl.py  test_binding.py  test_cli.py  test_corpus.py  test_diagnostics.py  test_durative.py  test_durative_state.py  test_examples.py  test_grounded_task.py  test_grounding.py  test_layering.py  test_llm_doc.py  test_mcpserver.py  test_model_coverage.py  test_numeric_model.py  test_numeric_planning.py  test_planner_base.py  test_planners.py  test_planning_internals.py  test_precondition_connective.py  test_requirements.py  test_state.py  test_temporal.py  test_triage.py  test_type_hierarchy.py  test_utf8.py
tests/corpus/: blocksworld-domain.pddl  blocksworld-upper-problem.pddl  briefcase-domain.pddl  briefcase-problem.pddl  durative-action-domain.pddl  durative-action-problem.pddl  logistics-problem.pddl  numeric-transport-problem.pddl  rooms-domain.pddl  rooms-problem.pddl  temporal-charge-domain.pddl  temporal-charge-problem.pddl  temporal-weld-domain.pddl  temporal-weld-notorch-problem.pddl  temporal-weld-problem.pddl  travel-domain.pddl  travel-problem.pddl
