[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pddlpy"
version = "0.4.4"
description = "Python PDDL parser"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hernan Foffani", email = "hfoffani@gmail.com"}
]
keywords = ["pddl", "planning", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime==4.13.2",
]

[project.urls]
Homepage = "https://github.com/hfoffani/pddl-lib"
Repository = "https://github.com/hfoffani/pddl-lib"
Issues = "https://github.com/hfoffani/pddl-lib/issues"

[tool.hatch.build]
exclude = [
    "tmp/",
    "*.jar",
    ".github/",
    ".vscode/",
    ".claude/",
    "examples-pddl/",
    ".venv/",
    "__pycache__/",
    "*.pyc",
]
# Override .gitignore to include generated ANTLR files in distributions
only-include = [
    "pddlpy/",
    "README.md",
    "LICENSE.txt",
    "pyproject.toml",
]
# Force include generated ANTLR parser files even though they're in .gitignore
force-include = { "pddlpy/pddlLexer.py" = "pddlpy/pddlLexer.py", "pddlpy/pddlParser.py" = "pddlpy/pddlParser.py", "pddlpy/pddlListener.py" = "pddlpy/pddlListener.py" }

[tool.hatch.build.targets.wheel]
packages = ["pddlpy"]

# Include example PDDL files as data files
[tool.hatch.build.targets.wheel.shared-data]
"examples-pddl" = "share/pddlpy/examples"

# Build hook is handled by Makefile's pyparser target
# ANTLR files are generated before building

[dependency-groups]
dev = [
    "twine>=5.0.0",
    "build>=1.0.0",
]
