[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pddlpy"
version = "1.1.0"
description = "Python PDDL parser"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hernan Foffani", email = "hfoffani@gmail.com"}
]
keywords = ["pddl", "planning", "parser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime==4.13.2",
]

[project.scripts]
pddlpy = "pddlpy.cli:main"
pddlpy-mcp = "pddlpy.mcpserver:main"

[project.urls]
Homepage = "https://github.com/hfoffani/pddl-lib"
Repository = "https://github.com/hfoffani/pddl-lib"
Issues = "https://github.com/hfoffani/pddl-lib/issues"

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
]

[tool.hatch.build]
exclude = [
    "tmp/",
    "*.jar",
    ".github/",
    ".vscode/",
    ".claude/",
    "examples-pddl/",
    ".venv/",
    "__pycache__/",
    "*.pyc",
]
# Override .gitignore to include generated ANTLR files in distributions
only-include = [
    "pddlpy/",
    "README.md",
    "LICENSE.txt",
    "pyproject.toml",
]
# Force include generated ANTLR parser files even though they're in .gitignore
force-include = { "pddlpy/pddlLexer.py" = "pddlpy/pddlLexer.py", "pddlpy/pddlParser.py" = "pddlpy/pddlParser.py", "pddlpy/pddlListener.py" = "pddlpy/pddlListener.py" }

[tool.hatch.build.targets.wheel]
packages = ["pddlpy"]

# Include example PDDL files as data files
[tool.hatch.build.targets.wheel.shared-data]
"examples-pddl" = "share/pddlpy/examples"

# Build hook is handled by Makefile's pyparser target
# ANTLR files are generated before building

[dependency-groups]
dev = [
    "twine>=5.0.0",
    "build>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "mcp>=1.2",
]

[tool.pytest.ini_options]
testpaths = ["pddlpy", "tests"]
python_files = ["test.py", "test_*.py"]

[tool.coverage.run]
source = ["pddlpy"]
omit = [
    "pddlpy/pddlLexer.py",
    "pddlpy/pddlParser.py",
    "pddlpy/pddlListener.py",
    "pddlpy/test.py",
]

# Generated ANTLR parser files are machine output, not ours — exclude them
# from linting and type checking everywhere.
[tool.ruff]
line-length = 100
extend-exclude = [
    "pddlpy/pddlLexer.py",
    "pddlpy/pddlParser.py",
    "pddlpy/pddlListener.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501 (line length) is noisy on the existing model code; the formatter
# handles wrapping when desired.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["pddlpy"]
# antlr4 runtime ships no type stubs.
ignore_missing_imports = true
# Generated parser files are excluded from type checking.
exclude = '(pddlLexer|pddlParser|pddlListener)\.py$'

# The planning layer is fully typed; hold it to a higher standard.
[[tool.mypy.overrides]]
module = "pddlpy.planning.*"
disallow_untyped_defs = true
warn_return_any = true
